--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+      "node": "16.14.2"
+    },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^16.0.2",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "mongoose": "^6.5.5"
   }
 }
